# btmux

./: .gitignore  Credits.Release  INSTALL  Makefile.am  Makefile.in  README.md  autoconf.h.in  configure  configure.ac  configure.in  getdata.sh
.devcontainer/: Dockerfile  devcontainer.json
btech/: Makefile.am  Makefile.in  autoconf.h.in  configure  configure.ac
btech/btfi/: Codec.cc  Document.cc  Document.hh  Makefile.am  Makefile.in  Value.cc  VocabSimple.cc  VocabTable.hh  common.c  common.h  doc.c  sax.c  sax.cc  sax.h  stream.c  stream.h  vocab.c  vocab.h  vocab.hh
btech/btfi/tests/: vocabtest.cc
btech/btpr/: Makefile.in  predicates.c
btech/btpr/include/: config.h
btech/src/: Makefile  Makefile.am  Makefile.in  coolmenu.c  glue.c  glue.hcode.c  glue.scode.c  mechfile.c
btech/src/btech/: aero.bomb.c  aero.move.c  artillery.c  autopilot_ai.c  autopilot_autogun.c  autopilot_commands.c  autopilot_core.c  autopilot_radio.c  btech.c  btechstats.c  btmacros.h  crit.c  ds.bay.c  econ.c  econ_cmds.c  eject.c  failures.c  hudinfo.c  map.c  map.conditions.c  map.dynamic.c  map.los.c  map.obj.c  mech.advanced.c  mech.ammodump.c  mech.bth.c  mech.c3.misc.c  mech.combat.c  mech.combat.misc.c  mech.combat.missile.c  mech.consistency.c  mech.contacts.c  mech.damage.c  mech.enhanced.criticals.c  mech.events.c  mech.hitloc.c  mech.ice.c  mech.los.c  mech.maps.c  mech.move.c  (+23 more)
btech/src/fi/: asn1der.c  asn1der.h  asn1tlv.c  asn1tlv.h  asn1type.h  fi-common.c  fi-common.h  fi-doc.c  fi-doc.h  fi-encalg.c  fi-encalg.h  fi-sax.c  fi-sax.h  fi-stream.c  fi-stream.h  fi-vocab.c  fi-vocab.h
btech/src/include/: glue.h  macros.h
btech/tests/: Makefile.am  Makefile.in  asn1der.c  asn1tlv.c
src/: Makefile.am  autoconf.h.in  boolexp.c  bsd.c  commac.c  commac.h  command.c  command.h  comsys.c  comsys.h  conf.c  config.h  cque.c  create.c  db.c  db.h  db_xdr.c  db_xdr.h  dllist.c  dllist.h  eval.c  file_c.c  flags.c  funceval.c  functions.c  game.c  help.c  log.c  (+23 more)
(+63 files in other folders)
